@@ -10,6 +10,8 @@ lazy val eva3 = (project in file("v3"))
     name := "eva-lang-compiler-v0.3",
     version := "1.0.0",
     scalaVersion := "2.13.1",
+    javacOptions ++= Seq("--enable-preview", "--release", "14"),
+    javaOptions += "--enable-preview",
     assemblyJarName in assembly := "eva.jar",
     libraryDependencies ++= Seq(
       "com.github.scopt" %% "scopt" % "4.0.0-RC2",
